# bankids-iban-workshop

./: .gitignore  README.md  pyproject.toml  run_example.py
src/bankids/: __init__.py  iban_build.py  iban_core.py  iban_parse.py  types.py
tests/: test_bank_iban_core.py
