[project]
name = "bankids-iban-workshop"
version = "0.1.0"
description = "Tiny IBAN utilities for a prompt-driven tests/docstrings workshop"
requires-python = ">=3.13"
readme = "README.md"
authors = [{ name = "Data Talents Workshop" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.3"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
